[feat] 이용권 코드 목록 API
