# public/swagger.json
@@ -1011,7 +1011,7 @@
                 "tags": [
                     "Ticket"
                 ],
-                "summary": "이용권 코드 발행",
+                "summary": "이용권 코드 발행 속성 수정",
                 "operationId": "91219d8e2a8d8b0899b5ab7698edd1cb",
                 "parameters": [
                     {
@@ -1094,6 +1094,137 @@
                                         "data": {
                                             "type": "string",
                                             "example": null,
+                                            "nullable": true
+                                        },
+                                        "code": {
+                                            "type": "string",
+                                            "example": null,
+                                            "nullable": true
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": null,
+                                            "nullable": true
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "인증 실패",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "type": "object",
+                                            "example": null,
+                                            "nullable": true
+                                        },
+                                        "code": {
+                                            "type": "string",
+                                            "example": "NOT_FOUND_MEMBER_INFO"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "회원정보를 찾을 수 없습니다."
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/retail_eggtv/{ticketId}/issues/{issueId}/codes": {
+            "get": {
+                "tags": [
+                    "Ticket"
+                ],
+                "summary": "이용권 코드 목록",
+                "operationId": "568df37c4ff38f429d87d4c3f972be0b",
+                "parameters": [
+                    {
+                        "name": "ticketId",
+                        "in": "path",
+                        "description": "이용권 ID",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "55"
+                        }
+                    },
+                    {
+                        "name": "issueId",
+                        "in": "path",
+                        "description": "이용권 발행 ID",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "26"
+                        }
+                    },
+                    {
+                        "name": "operatorId",
+                        "in": "query",
+                        "description": "운영자 ID",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "1"
+                        }
+                    },
+                    {
+                        "name": "teamId",
+                        "in": "query",
+                        "description": "팀 ID",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "2"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "정상 처리",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "properties": {
+                                                "eggtv_ticket_code": {
+                                                    "description": "에그TV 이용권 코드",
+                                                    "type": "string",
+                                                    "example": "6A5JMHSC"
+                                                },
+                                                "expiry_date": {
+                                                    "description": "등록 만료 일자",
+                                                    "type": "string",
+                                                    "example": "2025-06-30"
+                                                },
+                                                "eggtv_ticket_code_status": {
+                                                    "description": "에그TV 이용권 코드 상태(0=DISABLED=비활성,1=ENABLED=활성)",
+                                                    "type": "string",
+                                                    "example": "1"
+                                                },
+                                                "registration_count": {
+                                                    "description": "등록 횟수",
+                                                    "type": "string",
+                                                    "example": "0"
+                                                },
+                                                "use_count": {
+                                                    "description": "사용 횟수",
+                                                    "type": "string",
+                                                    "example": "0"
+                                                }
+                                            },
+                                            "type": "object",
                                             "nullable": true
                                         },
                                         "code": {
